author names change

--- a/ieee-template/csp-paper.tex
+++ b/ieee-template/csp-paper.tex
@@ -32,12 +32,12 @@ Automatic Intelligent Plants Caring Robots
 }
 
 
-\author{駱政成$^{1}$ and Your Teammate's Name$^{2}$% <-this % stops a space
+\author{Cheng-Cheng, Lo$^{1}$ and members of Team 1$^{2}$% <-this % stops a space
 \thanks{*This work was supported by the Robotics Master Program in National Chiao Tung University, Taiwan}% <-this % stops a space
-\thanks{$^{1}$Your name is with National Chiao Tung University, Taiwan. You should put your name as first author
-        {\tt\small youremail@papercept.net}}%
-\thanks{$^{2}$You should add your teammates' names here,
-        {\tt\small b.d.researcher@ieee.org}}%
+\thanks{$^{1}$Cheng-Cheng, Lo is with National Chiao Tung University, Taiwan. 
+        {\tt\small chenglo.eed04@g2.nctu.edu.tw}}%
+\thanks{$^{2}$members of Team 1,
+        {\tt\small}}%
 }
 
 
@@ -170,3 +170,4 @@ We are able to plan the path of the bot, with the position and directions of the
 \bibliographystyle{IEEEtran}
 \bibliography{egbib}
 
+\end{document}
