--- a/ieee-template/csp-paper.tex
+++ b/ieee-template/csp-paper.tex
@@ -60,7 +60,7 @@ Automatic Intelligent Plants Caring Robots
 \begin{figure}[htbp] % t means put this image at the top 
 \includegraphics[width=0.8\columnwidth]{23602259_1745798205444844_1157434552_n.jpg}
 \centering
-\caption{illustration of ther project}
+\caption{illustration of the project}
 \end{figure}
 
 
