--- a/ieee-template/csp-paper.tex
+++ b/ieee-template/csp-paper.tex
@@ -32,9 +32,9 @@ Automatic Intelligent Plants Caring Robots
 }
 
 
-\author{Cheng-Cheng, Lo$^{1}$ and members of Team 1$^{2}$% <-this % stops a space
+\author{Lo, Cheng-Cheng$^{1}$ and members of Team 1$^{2}$% <-this % stops a space
 \thanks{*This work was supported by the Robotics Master Program in National Chiao Tung University, Taiwan}% <-this % stops a space
-\thanks{$^{1}$Cheng-Cheng, Lo is with National Chiao Tung University, Taiwan. 
+\thanks{$^{1}$Lo, Cheng-Cheng is with National Chiao Tung University, Taiwan. 
         {\tt\small chenglo.eed04@g2.nctu.edu.tw}}%
 \thanks{$^{2}$members of Team 1,
         {\tt\small}}%
