--- a/ieee-template/csp-paper.tex
+++ b/ieee-template/csp-paper.tex
@@ -126,9 +126,19 @@ Automatic Intelligent Plants Caring Robots
 
 \section{SPECIFIC AIMS}
 
+
+
 \begin{itemize}
 \item path planning and control
 \end{itemize}
+
+
+\begin{figure}[htbp] % t means put this image at the top 
+\includegraphics[width=0.8\columnwidth]{csp-aim-scenario.jpg}
+\centering
+\caption{scenario illustration of path planning and control}
+\end{figure}
+
 
 The bot will drive on a desired path, for moving the plants to a proper place (with sufficient sunlight and water).\\
 
@@ -139,7 +149,7 @@ The bot will drive on a desired path, for moving the plants to a proper place (w
 \end{itemize}
 
 
-Several Apriltags will be placed at the place, and each Apriltag coresponds to a plant behind it.
+Several Apriltags will be placed, and each Apriltag coresponds to a plant behind it.
 
 The bot will follow a lane with Apriltags.
 
